--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-
     env:
       POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
@@ -23,6 +22,15 @@ jobs:
       - name: Start services
         run: docker compose up -d
 
-      - name: Show running containers
-        run: docker compose ps
+      - name: Wait for app to start
+        run: sleep 5
 
+      - name: Run health check test
+        run: docker compose exec -T app npm test
+
+      - name: Show logs if failed
+        if: failure()
+        run: docker compose logs
+
+      - name: Stop services
+        run: docker compose down
