--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-
-
 services:
   app:
     build: .
+    ports:
+      - "3000:3000"
     depends_on:
       - db
     restart: unless-stopped
-
 
   db:
     image: postgres:15-alpine
@@ -15,4 +14,3 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     restart: unless-stopped
-
