--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build services
-        run: docker compose build
+        run: docker build -t app:test .
 
       - name: Start services
         run: docker compose up -d
