--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push to Docker Hub
+      - name: tag and push to Docker Hub
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/docker-compose-ci:latest .
+          docker tag app:test ${{ secrets.DOCKERHUB_USERNAME }}/docker-compose-ci:latest
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/docker-compose-ci:latest
